infrastructure/02-iam/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    kubernetes.io/metadata.name: auth
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
