infrastructure/02-iam/manifests/app.yaml
# --- POSTGRES ---
apiVersion: v1
kind: Service
metadata: { name: postgres, namespace: auth }
spec:
  selector: { app: postgres }
  ports: [{ protocol: TCP, port: 5432, targetPort: 5432 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: auth
  annotations: { argocd.argoproj.io/sync-wave: "5" }
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres } }
  template:
    metadata: { labels: { app: postgres } }
    spec:
      securityContext:
        fsGroup: 3215
        runAsNonRoot: true
        runAsUser: 3215
        runAsGroup: 3215
      containers:
        - name: postgres
          image: mirror.gcr.io/postgres:17
          securityContext:
            runAsUser: 3215
            runAsGroup: 3215
            runAsNonRoot: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          ports: [{ name: postgres, containerPort: 5432 }]
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim: { claimName: keycloak-db-pvc-static }
---
# --- OPENLDAP ---
apiVersion: v1
kind: Service
metadata: { name: openldap, namespace: auth }
spec:
  selector: { app: openldap }
  ports:
    - { name: ldap, port: 389, targetPort: 8389 }
    - { name: ldaps, port: 636, targetPort: 8636 }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: auth
  annotations: { argocd.argoproj.io/sync-wave: "5" }
spec:
  replicas: 1
  strategy: { type: Recreate }
  selector: { matchLabels: { app: openldap } }
  template:
    metadata: { labels: { app: openldap } }
    spec:
      securityContext:
        fsGroup: 3951
      containers:
        - name: openldap
          image: jtgasper3/bitnami-openldap:2.6.13
          securityContext:
            runAsUser: 3951
            runAsGroup: 3951
            runAsNonRoot: true
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - {
                name: ldap-data,
                mountPath: /bitnami/openldap,
                subPath: ldap-data,
              }
            - { name: openldap-run, mountPath: /opt/bitnami/openldap/var/run }
      volumes:
        - name: ldap-data
          persistentVolumeClaim: { claimName: openldap-pvc-static }
        - name: openldap-run
          emptyDir: {}
---
# --- KEYCLOAK ---
apiVersion: v1
kind: Service
metadata: { name: keycloak, namespace: auth }
spec:
  selector: { app: keycloak }
  ports: 
    - { name: http, port: 8080, targetPort: 8080 }
    - { name: management, port: 9000, targetPort: 9000 }
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: auth
  annotations: { argocd.argoproj.io/sync-wave: "10" }
spec:
  serviceName: keycloak
  replicas: 1
  selector: { matchLabels: { app: keycloak } }
  template:
    metadata: 
      labels: { app: keycloak }
    spec:
      securityContext:
        fsGroup: 4648
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.1
          securityContext:
            runAsUser: 4648
            runAsGroup: 4648
            runAsNonRoot: true
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          args: ["start", "--http-enabled=true", "--metrics-enabled=true"]
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 9000
          volumeMounts:
            - name: keycloak-providers-volume
              mountPath: /opt/keycloak/providers
              subPath: providers-data
            - name: keycloak-lib
              mountPath: /opt/keycloak/lib/quarkus
            - name: keycloak-data
              mountPath: /opt/keycloak/data
      volumes:
        - name: keycloak-providers-volume
          persistentVolumeClaim: { claimName: keycloak-providers-pvc-static }
        - name: keycloak-lib
          emptyDir: {}
        - name: keycloak-data
          emptyDir: {}
---
# --- INGRESS ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: auth
  annotations:
    argocd.argoproj.io/sync-wave: "15"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls: [{ hosts: ["auth.foobarbaz.fr"], secretName: keycloak-cert-tls }]
  rules:
    - host: "auth.foobarbaz.fr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: keycloak, port: { number: 8080 } }
