infrastructure/02-iam/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: auth-security-hardened
  namespace: auth
spec:
  endpointSelector: {}
  ingress:
    # 1. Internal Namespace Traffic
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": auth
    # 2. External Traffic via Ingress (Cilium Envoy)
    - fromEntities:
        - host
        - remote-node
        - ingress
        - kube-apiserver
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8089"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8089"
              protocol: TCP
    # 3. OIDC Clients (ArgoCD, Cloudreve, Radicale, Grafana, etc.)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": argocd
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": cloudreve
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": radicale
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": grafana
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": opencloud
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # 4. Internal Tools (Vault)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": vault
      toPorts:
        - ports:
            - port: "8080"
    # 5. MONITORING: Allow Alloy to scrape metrics on port 9000
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # 6. LDAP clients
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": jellyfin
      toPorts:
        - ports:
            - port: "389"
              protocol: TCP
            - port: "636"
              protocol: TCP
            - port: "8389"
              protocol: TCP
            - port: "8636"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": auth
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - toFQDNs:
        - matchName: "ssl0.ovh.net"
        - matchName: "smtp.protonmail.ch"
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
            - port: "587"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
